--- a/templates/admin/salary_slip.html
+++ b/templates/admin/salary_slip.html
@@ -181,8 +181,11 @@
                                         <td class="w-25 py-2 px-3 text-center">{{salary_slip_details.final_salary_amount}}</td>
                                     </tr>
                                     <tr style="background-color:#F6F4F4;">
-                                        <td class="w-25 text-center" colspan="2" style="vertical-align: bottom; padding:10rem 10rem 0 10rem;"><p class="">Employee Signature</p></td>
-                                        <td class="w-25 text-center float-bottom" colspan="2" style="vertical-align: bottom; padding:10rem 10rem 0 10rem;"><p>Employer Signature</p></td>
+                                        <td class="w-25 text-center" colspan="2" style="vertical-align: bottom; padding:1rem 10rem 0 10rem;"><p class="">Employee Signature</p></td>
+                                        <td class="w-25 text-center float-bottom" colspan="2" style="vertical-align: bottom; padding:1rem 10rem 0 10rem;">
+                                            <img src="{% static 'img/company_stamp.png' %}" alt="Company Stamp" width="150rem" class="my-4">
+                                            <p>Employer Signature</p>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
