--- a/templates/admin/project-view.html
+++ b/templates/admin/project-view.html
@@ -247,7 +247,7 @@
 																<img class="avatar" alt="" src="{{employee.avatar.url}}">
 															</div>
 															<div class="list-body">
-																<span class="message-author">{{employee}}</span>
+																<span class="message-author">{{employee}} -- {{project_team_member}}</span>
 																<div class="clearfix"></div>
 																<span class="message-content text-secondary">{{employee.department}} | {{employee.designation}} | {{employee.technology}}</span>
 															</div>
