--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
 
 				<!-- Header Title -->
 				<div class="page-title-box">
-					<h3>Webmigrates Admin</h3>
+					<h3>Webmigrates</h3>
 				</div>
 				<!-- /Header Title -->
 
