--- a/templates/employee/employee-dashboard.html
+++ b/templates/employee/employee-dashboard.html
@@ -19,7 +19,7 @@
 													</div>
 													<div class="welcome-det">
 														<h3>Welcome, {{user.username}}</h3>
-														<p>Monday, 20 May 2019</p>
+														<p>{{current_date|date:'l , d F Y'}}</p>
 													</div>
 											</div>
 										</div>
@@ -30,27 +30,30 @@
 								<h2 class="dash-title m-0 "><span class="text-dark"><i class="las la-check-double"></i> </span> Task</h2>
 								<div class="task-wrapper">
 									<div class="task-list-container">
-										<div class="task-list-body">
+										 <div class="task-list-body">
 											{% for project in user_projects %}
-												<ul id="task-list" class="mb-3">
-													<h3><span class="text-secondary"><i class="las la-angle-right"></i> </span> {{project}}</h3>
-														<li class="task">
-															{% for task in user_task %}
-																{% if task.task_project_name == project.project_name %}
-																	<div class="task-container">
-																		<span class="task-action-btn task-check">
-																			<span class="action-circle large complete-btn" title="Mark Complete">
-																				<i class="material-icons">check</i>
-																			</span>
-																		</span>
-																		<span class="task-label">{{task.task_name}}</span>
-																	</div>
-																{% endif %}
-															{% endfor %}
-														</li>
-                                                	</ul>
-												{% endfor %}
-                                            </div>
+											<div class="accordion" id="accordionExample">
+												<div class="card-header" id="heading{{ loop.index }}">
+													<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
+													  <span class="text-secondary"><h3><i class="las la-angle-right"></i> {{ project }}</h3></span>
+													</button>
+												</div>
+												<div id="collapse{{ loop.index }}" class="collapse" aria-labelledby="heading{{ loop.index }}" data-parent="#accordionExample">
+													<ul id="task-list" class="mb-3">
+													  {% for task in user_task %}
+														  {% if task.task_project_name == project.project_name %}
+															  <li class="task">
+																<div class="task-container">
+																	<span class="task-label">{{ task.task_name }}</span>
+																</div>
+															  </li>
+														  {% endif %}
+													  {% endfor %}
+													</ul>
+												</div>
+											</div>
+											{% endfor %}
+										  </div>
                                         </div>
                                     </div>
 							</section>
@@ -87,28 +90,15 @@
 										<div class="card-body">
 											<div class="time-list">
 												<div class="dash-stats-list">
-													<h4>4.5</h4>
+													<h4>{{total_leave.conditional_amount}}</h4>
+													<p>Total Leave</p>
+												</div>
+												<div class="dash-stats-list">
+													<h4>{{leave_taken}}</h4>
 													<p>Leave Taken</p>
 												</div>
 												<div class="dash-stats-list">
-													<h4>12</h4>
-													<p>Remaining</p>
-												</div>
-											</div>
-										</div>
-									</div>
-								</section>
-								<section>
-									<h5 class="dash-title">Your time off allowance</h5>
-									<div class="card">
-										<div class="card-body">
-											<div class="time-list">
-												<div class="dash-stats-list">
-													<h4>5.0 Hours</h4>
-													<p>Approved</p>
-												</div>
-												<div class="dash-stats-list">
-													<h4>15 Hours</h4>
+													<h4>{{remaing_leave}}</h4>
 													<p>Remaining</p>
 												</div>
 											</div>
@@ -119,7 +109,7 @@
 									<h5 class="dash-title">Upcoming Holiday</h5>
 									<div class="card">
 										<div class="card-body text-center">
-											<h4 class="holiday-title mb-0">Mon 20 May 2019 - Ramnavmi</h4>
+											<h4 class="holiday-title mb-0">{{holiday.holiday_date|date:'D ,d - F - Y'}} - {{holiday}}</h4>
 										</div>
 									</div>
 								</section>
