[update] update functionality

--- a/templates/employee/tasks.html
+++ b/templates/employee/tasks.html
@@ -63,7 +63,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <div>
-                                                                        <button class="btn mr-2 ml-5 p-0 text-primary text-nowrap" onclick="editTaskStatus({{task_list.id}})">Update</button>
+                                                                        <button class="btn mr-2 ml-5 p-0 text-primary text-nowrap" onclick="editTaskStatus({{task_list.task_name.id}})">Update</button>
                                                                     </div>
                                                                 </div>
                                                             </li>
